<resources>
    <string name="app_name">WartaJemaatApp</string>
    <string name="alamat_gereja">Jl. Perintis Kemerdekaan No. 12 Makassar. \nTelp. 0411-586915</string>
    <string name="dummy_date">Minggu, 24 September 2017</string>
    <string name="dummy_pastor">Gembala : Pdt. Johny Sumarauw, BRE.,S.Th.,M.Th</string>
    <string name="dummy_sector_1">Ibadah Sektor Sion</string>
    <string name="dummy_sector_1_family">Kel. Yan Tande</string>
    <string name="dummy_sector_1_address">BTP Blok M No. 239</string>
    <string name="kisah_para_rasul">Kisah Para Rasul</string>
    <string name="_10_14">10:14</string>
    <string name="dummy_title">Kunci Keberhasilan Kornelius</string>
    <string name="dummy_pastor_1">Oleh Pdt. Yarson ( Sulteng )</string>
    <string name="dummy_full">Ketika kita mendengar suatu permohonan yang didengar maka pasti hati kita akan merasa senang demikian pula dengan Kornelius dan keluarganya yang merasa senang ketika malaikat Tuhan berkata bahwa semua doamu telah dide....\n
    Ketika kita mendengar suatu permohonan yang didengar maka pasti hati kita akan merasa senang demikian pula dengan Kornelius dan keluarganya yang merasa senang ketika malaikat Tuhan berkata bahwa semua doamu telah dide....\n
    Ketika kita mendengar suatu permohonan yang didengar maka pasti hati kita akan merasa senang demikian pula dengan Kornelius dan keluarganya yang merasa senang ketika malaikat Tuhan berkata bahwa semua doamu telah dide....\n
    Ketika kita mendengar suatu permohonan yang didengar maka pasti hati kita akan merasa senang demikian pula dengan Kornelius dan keluarganya yang merasa senang ketika malaikat Tuhan berkata bahwa semua doamu telah dide....</string>
    <string name="dummy_text_church_treasury">Kas Jemaat 2022</string>
    <string name="worship">Ibadah</string>
    <string name="ibadah_minggu_pagi">Ibadah Minggu Pagi</string>
    <string name="ibadah_minggu_malam">Ibadah Minggu Malam</string>
    <string name="ibadah_sabtu_malam">Ibadah Sabtu Malam</string>
    <string name="baca_selengkapnya">Baca Selengkapnya</string>
    <string name="warta_jemaat">Warta Jemaat</string>
    <string name="jadwal_pelayanan">Jadwal\nPelayanan</string>
    <string name="jadwal_nibadah_sektor">Jadwal\nIbadah Sektor</string>
    <string name="waiter_schedule_sunday_school">Jadwal Pelayan Sekolah Minggu</string>
    <string name="laporan_nkeuangan">Laporan\nKeuangan</string>
    <string name="thanksgiving_worship_information">Info Ibadah Syukur</string>
    <string name="dummy_subtitle">Ibadah Syukur 1 Tahunan Wafatnya Ibu Rohani</string>
    <string name="dummy_content_info">Jumat, 06 Oktober 2017 Pukul 19:00 WITA Di Gereja GPdI El-Shaddai Makassar</string>
    <string name="info_tambahan">Info Tambahan</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="_01_oktober_07_oktober">( 01 Oktober - 07 Oktober )</string>
    <string name="dummy_week">( %1$s - %2$s )</string>


    <string name="birthdy_item">%1$d. %2$s</string>
    <string name="by_shepher">Oleh %1$s</string>
    <string name="shepherd">Gembala : %1$s</string>
    <string name="when_where_thanks_giving">%1$s, %2$s Pukul %3$s WITA di %4$s</string>
    <string name="current_date">%1$s, %2$s</string>
    <string name="text_bible">%1$s \n %2$s</string>
    <string name="wita">%1$s WITA</string>
    <string name="formaat_date_indonesia">dd-MM-yyyy</string>
    <string name="formaat_date_internasional">yyyy-MM-dd</string>

    <string name="Leader">Leader</string>
    <string name="Singer">Singer</string>
    <string name="Music">Music</string>
    <string name="Tamborin">Tamborin</string>
    <string name="Mixer">Mixer</string>
    <string name="Banners">Banners</string>
    <string name="LCD">LCD</string>
    <string name="Usher">Usher</string>
    <string name="Pujian">Pujian</string>
    <string name="Park">Parkir</string>

    <string name="service_suanday_school">Pelyanan Sekolah Minggu</string>
    <string name="building_church">Pembangunan Gereja</string>
    <string name="field_facilities">Bidang Sarana &amp; Pra Sarana</string>

    <string name="ibadah_torsina">Ibadah Sektor Torsina</string>
    <string name="ibadah_pisga">Ibadah Sektor Pisga</string>
    <string name="ibadah_hermon">Ibadah Sektor Hermon</string>

    <string name="team">Team</string>
    <string name="kelas_beaar">Cerita FA Kelas Besar</string>
    <string name="kelas_kecil">Cerita FA Kelas Kecil</string>
    <string name="service">Pujian/Musik</string>

    <string name="masuk">Masuk: Rp. %1$s</string>
    <string name="keluar">Keluar: Rp. %1$s</string>
    <string name="saldo">Saldo: Rp. %1$s</string>
    <string name="ket">Ket: %1$s</string>

</resources>