<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/bluePrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/distance_16"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDevotional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Renungan"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeNormal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hari ini : "
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeNormal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDevotional" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textNameChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kisah_para_rasul"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textNumberChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_14"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDevotional" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dummy_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNumberChapter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textPastor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/dummy_pastor_1"
            app:layout_constraintEnd_toEndOf="@id/textTitle"
            app:layout_constraintStart_toStartOf="@id/textTitle"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textBibleContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_8"
            android:text="@string/dummy_full"
            android:maxLines="5"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPastor" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textBibleContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/distance_16"
            android:text="@string/baca_selengkapnya"
            android:textSize="@dimen/textSizeSmall"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>