<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSector1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_24"
        android:layout_marginTop="@dimen/distance_12"
        android:text="@string/dummy_sector_1"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_8"
        android:layout_marginEnd="@dimen/distance_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textSector1"
        app:layout_constraintTop_toBottomOf="@+id/textSector1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/serctor1Right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bluePrimary"
                android:gravity="center|start"
                android:orientation="vertical"
                android:padding="@dimen/distance_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sector1Left"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selasa, 3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeNormal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Oktober 2022"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeNormal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19.00 Wita"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeNormal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/sector1Left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/grey"
                android:gravity="center|start"
                android:orientation="vertical"
                android:padding="@dimen/distance_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/serctor1Right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_sector_1_family"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeNormal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textAddess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_sector_1_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeNormal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>